<resources>
    <string name="app_name">Shooter</string>
    <string name="app_name_title">Space Shooter</string>
    <string name="all_time_high_n_a">All-Time High: N/A</string>
    <string name="recent_scores">Recent Scores:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_game">Start Game</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="high_score_format">All-Time High: %1$s - %2$d</string>
    <string name="recent_score_line">%1$s: %2$d</string>
    <string name="no_scores_yet">No scores yet!</string>
    <string name="shop_button">Shop</string>
    <string name="shop_title">Upgrades</string>
    <string name="coin_balance_format">Coins: %d</string>
    <string name="buy_health_upgrade">Buy +1 Max Health (50 Coins)</string>
    <string name="buy_damage_upgrade">Buy +1 Bullet Damage (100 Coins)</string>
</resources>